First official release.

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ As the videos support several subtitle languages, you must select your preferred
 To install it simply download the zip file, and then proceed as with any other plugin from XBMC:
  System->Settings->Add-ons->Install from zip file.
 
-Any issues detected can be reported using this forum thread for official support: http://forum.xbmc.org/showthread.php?tid=
+Any issues detected can be reported using this forum thread for official support: http://forum.xbmc.org/showthread.php?tid=186024
 
 Enjoy it!
 
