--- a/resources/language/Czech/strings.xml
+++ b/resources/language/Czech/strings.xml
@@ -3,6 +3,7 @@
    <string id="30010">Další stránka</string>
    <string id="30011">Typ grafické karty není podporován</string>
    <string id="30012">Nelze najít URL videa</string>
+   <string id="30101">Seřadit podle oblíbenosti</string>
    <string id="30102">Debug (uvolnění polena)</string>
    <string id="30103">Kvalita videa</string>
    <string id="30104">Hledat</string>
