--- a/resources/language/French/strings.xml
+++ b/resources/language/French/strings.xml
@@ -3,6 +3,7 @@
   <string id="30010">Page Suivant</string>
   <string id="30011">Type de vidéo non supporte</string>
   <string id="30012">Adresse vidéo non trouvee</string>
+  <string id="30101">Classement par popularité</string>
   <string id="30102">Debug (logs)</string>
   <string id="30103">Qualité vidéo</string>
   <string id="30104">Chercher</string>
