--- a/resources/language/German/strings.xml
+++ b/resources/language/German/strings.xml
@@ -3,6 +3,7 @@
   <string id="30010">Nachste Seite</string>
   <string id="30011">Video-Typ nicht unterstutzt</string>
   <string id="30012">Konnte Video-URL nicht finden</string>
+  <string id="30101">Sortieren nach Popularität</string>
   <string id="30102">Debug (logs)</string>
   <string id="30103">Video Qualität</string>
   <string id="30104">Suchen</string>
