--- a/resources/language/Italian/strings.xml
+++ b/resources/language/Italian/strings.xml
@@ -3,6 +3,7 @@
   <string id="30010">Pagina Successiva</string>
   <string id="30011">Tipo video non supportato</string>
   <string id="30012">Impossibile localizzare la url</string>
+  <string id="30101">Ordina per popolarità</string>
   <string id="30102">Debug (abilitazione logs)</string>
   <string id="30103">Qualità Video</string>
   <string id="30104">Ricercare</string>
