--- a/resources/language/Spanish/strings.xml
+++ b/resources/language/Spanish/strings.xml
@@ -3,6 +3,7 @@
   <string id="30010">Siguiente Página</string>
   <string id="30011">Tipo de video no soportado</string>
   <string id="30012">No se ha podido localizar la url de video</string>
+  <string id="30101">Ordenar por popularidad</string>
   <string id="30102">Debug (activa los logs)</string>
   <string id="30103">Calidad de los vídeos</string>
   <string id="30104">Buscar</string>
