--- a/resources/language/Portuguese/strings.xml
+++ b/resources/language/Portuguese/strings.xml
@@ -3,6 +3,7 @@
   <string id="30010">Próxima página</string>
   <string id="30011">Vídeo não suportado</string>
   <string id="30012">Não foi possível localizar o vídeo url</string>
+  <string id="30101">Ordenar por popularidade</string>
   <string id="30102">Debug (enable registos)</string>
   <string id="30103">Qualidade de video</string>
   <string id="30104">Pesquisa</string>
