--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-ESO Videos: XBMC video plugin to watch the ESO videos from the ESO web site.
+ESO Videos: KODI video plugin to watch the ESO videos from the ESO web site.
 
    Copyright (C) 2014 Jose Antonio Montes (jamontes)
 
@@ -18,18 +18,18 @@ ESO Videos: XBMC video plugin to watch the ESO videos from the ESO web site.
 
 Initial release 1.0.0
 
-This XBMC plugin allows to watch the videos from the ESO web site (more than 2000 videos available).
+This KODI plugin allows to watch the videos from the ESO web site (more than 2000 videos available).
 
 ESO, the European Southern Observatory, is the foremost intergovernmental astronomy organisation in Europe and the world's most productive astronomical observatory. ESO provides state-of-the-art research facilities to astronomers and is supported by Austria, Belgium, Brazil, the Czech Republic, Denmark, Finland, France, Germany, Italy, the Netherlands, Portugal, Spain, Sweden, Switzerland and the United Kingdom. Several other countries have expressed an interest in membership.
 
 ESO's main mission, laid down in the 1962 Convention, is to provide state-of-the-art research facilities to astronomers and astrophysicists, allowing them to conduct front-line science in the best conditions (source: http://www.eso.org/public/about-eso/).
 
-As the videos support several subtitle languages, you must select your preferred language for the subtitles from the XBMC *System=>Settings=>Appearance=>International=>Preferred Subtitle language* option menu.
+As the videos support several subtitle languages, you must select your preferred language for the subtitles from the KODI *System=>Settings=>Appearance=>International=>Preferred Subtitle language* option menu.
 
-To install it simply download the zip file, and then proceed as with any other plugin from XBMC:
+To install it simply download the zip file, and then proceed as with any other plugin from KODI:
  System->Settings->Add-ons->Install from zip file.
 
-Any issues detected can be reported using this forum thread for official support: http://forum.xbmc.org/showthread.php?tid=186024
+Any issues detected can be reported using this forum thread for official support: https://forum.kodi.tv/showthread.php?tid=186024
 
 Enjoy it!
 
