--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.3.0+matrix.1 (2021.05.21)
+- Code updated for matrix onwards.
 1.0.7 (2017.03.13)
 - Fixed thumbnail images.
 - Updated logging system.
